move `useJUnitPlatform()` to the `org.apache.groovy-tested` plugin